--- a/alltime.html
+++ b/alltime.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Album List</h1>
-    <div id="albumContainer" class="album-grid"></div>
+    <div id="albumContainer" class="album-grid"><div class="album-background"></div></div>
 
     <script src="script_at.js"></script>
 
